サイドバーを削除

--- a/wp-content/themes/responsive_design87/style.css
+++ b/wp-content/themes/responsive_design87/style.css
@@ -210,7 +210,7 @@ overflow:hidden;
 }
 
 * html .gridWrapper{height:1%;}
-	
+
 .grid{
 overflow:hidden;
 }
@@ -459,7 +459,7 @@ padding:10px 0 10px 15px;
 margin:10px 0 25px 30px;
 border-left:5px solid #ccc;
 }
- 
+
 .post blockquote p{padding:5px 0;}
 
 .post table{
@@ -526,7 +526,7 @@ img.alignleft{margin:0 7px 2px 0;}
 	}
 
 	a#menu{display:none;}
-	
+
   #mainNav{
 	clear:both;
 	z-index:200;
@@ -557,7 +557,7 @@ img.alignleft{margin:0 7px 2px 0;}
 	color:#bababa;
 	font-size:10px;
 	}
-	
+
 	#mainNav ul ul{width:160px;background:#fff;}
 	#mainNav li ul{display:none;}
 
@@ -567,7 +567,7 @@ img.alignleft{margin:0 7px 2px 0;}
 	top:64px;
 	z-index:500;
 	}
-	
+
 	#mainNav li li{
 	margin:0;
 	float:none;
@@ -575,7 +575,7 @@ img.alignleft{margin:0 7px 2px 0;}
 	border:0;
 	}
   #mainNav li li:last-child{border:0;}
-	
+
 	#mainNav li li a{
 	width:auto;
 	height:auto;
@@ -586,7 +586,7 @@ img.alignleft{margin:0 7px 2px 0;}
 	}
 
 	#mainNav li li span{padding:0 10px;}
-	
+
 	#mainNav li.current-menu-item a{
 	border-color:#555;
 	}
@@ -600,36 +600,36 @@ img.alignleft{margin:0 7px 2px 0;}
 	padding:0;
 	margin:0 auto;
 	}
-	
+
 	#wrapper{clear:both;padding:20px 0;}
-	
+
 	#main{
 	float:right;
-	width:680px;
+	width:100%;
 	padding:15px 0 0 0;
 	}
-	
+
 	#sidebar{
 	float:left;
 	width:250px;
 	padding:15px 0;
 	overflow:hidden;
 	}
-	
+
 	#sidebar article{
 	margin-bottom:20px;
 	overflow:hidden;
 	}
-	
+
 	.logo{width:500px;}
-	
+
 	/* グリッド全体 */
 	.gridWrapper{
 	display:table;
 	border-collapse:separate;
 	border-spacing:0px;
 	}
-	
+
 	/* グリッド */
 	.grid{
 	width:320px;
@@ -647,7 +647,7 @@ img.alignleft{margin:0 7px 2px 0;}
         -ms-box-sizing:border-box;
             box-sizing:border-box;
 	}
-	
+
 	#mainNav{
 	clear:both;
 	width:100%;
@@ -684,7 +684,7 @@ img.alignleft{margin:0 7px 2px 0;}
 	top:0;
 	z-index:1;
 	}
-	
+
 	#mainNav ul{margin:0;padding:0;}
 
   #mainNav li{
@@ -702,13 +702,13 @@ img.alignleft{margin:0 7px 2px 0;}
 	text-align:left;
 	border-bottom:1px dashed #ccc;
 	}
-	
+
  	#mainNav li a span{padding-left:10px;}
-	
-	
+
+
 	#mainNav ul > li:last-child a{border:0;}
 	#mainNav li li:last-child a{border-bottom:1px dashed #ccc;}
- 
+
 	#mainNav li.current-menu-item a,#mainNav li a:hover,#mainNav li.current-menu-item a,#mainNav li a:active, #mainNav li li.current-menu-item a, #mainNav li.current-menu-item li a:hover, #mainNav li.current-menu-item li a:active{
 	color:#555;
 	}
@@ -729,17 +729,17 @@ img.alignleft{margin:0 7px 2px 0;}
 	#mainNav li li:last-child.current-menu-item a,#mainNav li li:last-child a:hover,#mainNav li.current-menu-item li:last-child a:hover{background:url(images/subLast.png) no-repeat 20px -65px;}
 
 	nav div.panel{float:none;}
-	
+
 	#header{padding-left:10px;}
-	
+
 	#main{padding-top:15px;}
 	section.toppage{margin:0;}
 	#sidebar{padding-bottom:15px;}
 	#sidebar article{padding:7px 8px;}
-	
+
 	#footer .grid,#footer ul.footnav{float:none;width:100%;text-align:center;}
 	ul.footnav li{float:none;display:inline-block;}
-	
+
 	.grid{
 	float:left;
 	width:32%;
@@ -757,19 +757,19 @@ img.alignleft{margin:0 7px 2px 0;}
 
 @media only screen and (max-width:640px){
 	#header{height:auto;padding-bottom:20px;}
-	
+
 	#header h1,.logo,.info{text-align:center;}
-	
+
 	.logo,.info{clear:both;width:100%;float:none;}
-	
+
 	.logo p{float:none;display:block;}
 	.logo img{float:none;padding:0;}
-	
+
 	.box img{
 	float:left;
 	margin-right:5px;
 	}
-	
+
 	.box h3{padding-top:0;}
 
   .alignleft,.alignright,img.alignleft,img.alignright{float:none;display:block;margin:0 auto 10px;}
